--- a/resources/assets/sass/light-theme.scss
+++ b/resources/assets/sass/light-theme.scss
@@ -1,2 +1,7 @@
 //background colour
 $body-bg: #f1f1f1;
+
+.select2-container {
+  border: solid #f1f1f1 1px !important;
+  border-radius: .25rem !important;
+}
